# djangochatapp

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt  schema.yml
backend/account/: admin.py  models.py
backend/account/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/server/: admin.py  models.py  schema.py  serializer.py  validators.py  views.py
backend/server/migrations/: 0001_initial.py  0002_category_icon.py
